--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,43 +1,150 @@
-.header{
-    height: 100px;
-    background-color: var(--fonts-color) ;
-    position: relative;
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: inherit; /*kế thừa thẻ từ cái thẻ chứa nó */
 }
-.header__nav{
-    display: flex;
-    /* justify-content: space-between; */
+html{
+    font-size: 62.5%; /*1rem=10px*/
+    line-height: 1.6rem;
+    font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
+}
+:root{
+    --white-color: #fff;
+    --black-color: #000;
+    --text-color: #333;
+    --fonts-color:#4b8bc5;
+}
 
-    position: absolute;
-    bottom: 0;
+.header{
+    height: 80px;
+    background-color: rgb(232, 221, 221);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
+.header__nav{
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+    max-width: auto;
+    max-height: auto;
+    line-height: 80px;
+    padding: 0 0.8rem;
+}
+.header__nav-toolbar{
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    font-size: 1.8rem;
+
+}
+.header-logo{
+    max-width: 90px;
+    max-height: 45px;
+    min-height: 100%;
+    height: auto;
+    width: auto;
+}
+
+.header__pc-logo{
+    min-height: 100%;
+    max-width: 90px;
+    max-height: 60px;
+    width: auto;
+    height: auto;
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+.header__nav-list{
+    display: flex;
+    align-items: center;
+    margin-left: 50px;
+
     
 
 }
-
-.header__nav-list{
+.header__nav-list1{
     list-style: none;
-    padding: 0;
-}
-.header__nav-item{
-    margin: 0px 20px;
-
-
-}
-.header__nav-item,
-.header__nav-item-phone{
-    display: inline-block ;
-    font-size: 1.5rem;
-    color: var(--white-color);
+    display: flex;
+    column-gap: 50px;
     text-decoration: none;
-    font-size: 1.8rem;
+
 }
-.header__nav-item:hover,
-.header__nav-item-phone:hover{
-    cursor: pointer;
-    color: rgba(255, 255, 255, 0.7);
+.header__nav-item>a{
+    text-decoration: none;
+    color: var(--text-color);
+
 }
+
+
+.header__nav-toolbar .nav-toolbar2{
+    justify-content: end;
+    height: 72px;
+    width: 360px;
+
+}
+
+.header__nav-search{
+    height: 40px;
+    background-color: #fff;
+    border: solid 0.8px var(--text-color);
+    border-radius: 5px;
+    display: flex;
+    width: 400px;
+    margin-right: 20px;
+}
+.span1{
+    align-items: center;
+    display: flex;
+    padding: 15px;
+}
+.span-search{
+    height: 40px;
+    line-height: 40px;
+    /* width: auto; */
+}
+
+
+.span-search>input{
+    border: none;
+    outline: none;
+    width: auto;
+}
+
+.span-search>i{
+    background-color: #fff;
+    
+}
+.header__nav-list2{
+    list-style: none;
+    display: flex;
+    column-gap: 10px;
+    text-decoration: none;
+
+}
+.header__nav-list2>li>button{
+    background-color: rgb(232, 221, 221); ;
+    border: none;
+}
+.header__nav-list2>li>button:active{
+    background-color: rgb(139, 114, 114); 
+    border: none;
+}
+
+.slider{
+    height: 430px;
+    background-color: #333;
+    margin-top: 80px;
+    padding-top: 50%;
+}
+
 .container{
-    background-color: red;
-    height: 50px;
+    background-color: rgb(182, 174, 174);
+    height: 50px
 
 }
 .footer{
